--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
+    "leaflet": "^1.3.4",
     "vue": "^2.5.17",
+    "vue-awesome": "^3.2.0",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vue2-leaflet": "^1.2.3"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.0.0-beta.53",
